Fix #28583 - [Bug] Improve debug logs